k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: restbasic
  labels:
    app: restbasic
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restbasic
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: restbasic
        version: v1
    spec:
      containers:
        - name: restbasic
          image: docker.io/giorman/restbasic:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
