k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restbasic
  labels:
    app: restbasic
    service: restbasic
spec:
  ports:
    - port: 9090
      name: http
  selector:
    app: restbasic
