k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: restbasic
  name: restbasic
spec:
  port:
    targetPort: 9090
  to:
    kind: Service
    name: restbasic
