k8s/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: restbasic
spec:
  hosts:
    - "*"
  gateways:
    - restbasic-gateway
  http:
    - match:
        - uri:
            exact: /hello
        - uri:
            prefix: /hello
        - uri:
            exact: /login
        - uri:
            exact: /logout
        - uri:
            prefix: /api/v1/products
      route:
        - destination:
            host: restbasic
            port:
              number: 9090
